deep-cors/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deep-cors-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deep-cors-ui
  template:
    metadata:
      labels:
        app: deep-cors-ui
    spec:
      containers:
        - name: deep-cors-ui
          image: laurentc35/deep-cors:0.0.5
