deep-cors/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deep-cors-ui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - deep-cors.demo.insee.io
  rules:
    - host: deep-cors.demo.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deep-cors-ui-svc
                port:
                  number: 80
